[gd_scene load_steps=17 format=3 uid="uid://dwww23dsvnhg8"]

[ext_resource type="Script" path="res://scripts/entity/enemies/ghost_enemy.gd" id="1_3dn8v"]
[ext_resource type="Texture2D" uid="uid://cpmnypnqfca0l" path="res://assets/art/entity/ghost.png" id="3_4s86v"]
[ext_resource type="Shader" uid="uid://4gb7hlqy3ksx" path="res://misc/resources/shaders/hit_flash.tres" id="3_e25jr"]
[ext_resource type="PackedScene" uid="uid://b048cf08scotb" path="res://scenes/components/health_component.tscn" id="5_peoyj"]
[ext_resource type="PackedScene" uid="uid://dunjlie0dfpac" path="res://scenes/components/hitbox_component.tscn" id="6_1d0d1"]
[ext_resource type="PackedScene" uid="uid://dk6tq8iiesp0e" path="res://scenes/components/hurtbox_component.tscn" id="7_be5s4"]
[ext_resource type="PackedScene" uid="uid://ks5hyrq6x4v1" path="res://scenes/misc/area_of_sight.tscn" id="8_rbtc6"]
[ext_resource type="PackedScene" uid="uid://r53nt5uliuqf" path="res://scenes/misc/line_of_sight.tscn" id="9_wa1ek"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eb74s"]
radius = 16.0312

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tuko5"]
resource_local_to_scene = true
shader = ExtResource("3_e25jr")
shader_parameter/Enabled = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qshim"]
bg_color = Color(1, 0, 0.105882, 1)
corner_radius_top_left = 8
corner_radius_bottom_right = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_mwd6q"]
radius = 23.0868

[sub_resource type="CircleShape2D" id="CircleShape2D_icdur"]
radius = 18.0

[sub_resource type="Animation" id="Animation_yj808"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wn0sw"]
resource_name = "hit_flash"
length = 0.075
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hgvt"]
_data = {
"RESET": SubResource("Animation_yj808"),
"hit_flash": SubResource("Animation_wn0sw")
}

[node name="GhostEnemy" type="CharacterBody2D" node_paths=PackedStringArray("hitbox_component", "hurtbox_component", "health_component", "hit_flash_anim", "navigation_agent", "nav_timer", "area_of_sight", "line_of_sight")]
y_sort_enabled = true
collision_layer = 24
collision_mask = 16
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_3dn8v")
speed = 150.0
invisble_distance = 350.0
max_ammo = 3
hitbox_component = NodePath("HitboxComponent")
hurtbox_component = NodePath("HurtboxComponent")
health_component = NodePath("HealthComponent")
hit_flash_anim = NodePath("HitFlashAnimationPlayer")
navigation_agent = NodePath("NavigationAgent2D")
nav_timer = NodePath("NavigationTimer")
min_nav_time = 0.4
area_of_sight = NodePath("AreaOfSight")
line_of_sight = NodePath("LineOfSight")
shake_on_hit = 0.0
shake_on_death = 2.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
path_max_distance = 150.0
navigation_layers = 2
path_metadata_flags = 0
simplify_path = true
simplify_epsilon = 3.0

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="TeleportTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_eb74s")
debug_color = Color(0.582521, 0.550979, 0, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_tuko5")
position = Vector2(0, 9.53674e-07)
scale = Vector2(1.8125, 1.8125)
texture = ExtResource("3_4s86v")
offset = Vector2(0, -7.81941)

[node name="HealthComponent" parent="." node_paths=PackedStringArray("health_bar") instance=ExtResource("5_peoyj")]
health_bar = NodePath("ProgressBar")
max_health = 28

[node name="ProgressBar" type="ProgressBar" parent="HealthComponent"]
z_index = 20
z_as_relative = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -65.0
offset_right = 31.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_qshim")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HitboxComponent" parent="." instance=ExtResource("6_1d0d1")]
collision_layer = 0
collision_mask = 8
hit_delay = 0.01
single_hits = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_mwd6q")

[node name="HurtboxComponent" parent="." instance=ExtResource("7_be5s4")]
collision_layer = 2
collision_mask = 0
hurt_damage = 3
knockback_type = "center"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_icdur")

[node name="AreaOfSight" parent="." instance=ExtResource("8_rbtc6")]
collision_layer = 0
collision_mask = 33
monitorable = false
radius = 2500.0

[node name="LineOfSight" parent="." instance=ExtResource("9_wa1ek")]
collision_mask = 32
max_target_distance = 2500.0

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4hgvt")
}

[connection signal="timeout" from="NavigationTimer" to="." method="_on_navigation_timer_timeout"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_teleport_timer_timeout"]
